# file_service

./: .env.example  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile  start_api.sh  start_worker.sh
src/api/: main.py  settings.py
src/api/connection_managers/: mongo_connection_manager.py
src/api/controllers/: file_controller.py
src/api/core/: application.py  container.py  controller.py  exception.py
src/api/models/: file_model.py
src/api/repositories/: base_repository.py  bucket_repository.py  file_repository.py
src/api/serializers/: file_serializers.py
src/api/services/: file_service.py
src/worker/: worker_server.py
src/worker/manager/: task_manager.py
