[tool.poetry]
name = "file_service"
version = "0.1.0"
description = "File service"
authors = ["Dmitry Rozhaev <dmitry.rozhaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
fastapi-utils = "^0.2.1"
aiohttp = "^3.8.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
injector = "^0.18.4"
motor = "^2.5.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
celery = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
